@@ -261,3 +261,4 @@ suggestions:
   Blake Sweeney
   Dylan Mikus
   Andrea Rizzi
+  Florian Petry
